--- a/docs/mission.mdx
+++ b/docs/mission.mdx
@@ -3,33 +3,28 @@ sidebar_position: 2000
 title: "🎯 Our Mission"
 ---
 
+## Bring Intelligence Home
 
-### A Note from Our Founder
+The most transformative technology in human history is here. It can diagnose, discover, teach, build, and create. And right now, for most people on this planet, it lives behind someone else's login page, on someone else's servers, under someone else's rules.
 
-Before diving into our mission, we invite you to read our founder's blog post: ["Why I’m Building Open WebUI"](https://jryng.com/thoughts/why-open-webui). In this post, Tim shares the inspiration, challenges, and hopes driving Open WebUI's vision forward. It's a heartfelt introduction to what we're all about!
+We're changing that.
 
----
+**Open WebUI is building toward a future where every person has their own AI that truly knows them, runs on their own hardware, and goes wherever they go.**
 
-Hello there! 👋
+Picture what that means.
 
-Imagine a world where local, open models that can run on any machine, united as one, outperform proprietary giants like GPT-4. Even better, imagine us all having the capability to train and reproduce state-of-the-art models like GPT-4 or GPT-5 from scratch, using high-quality, curated data.
+A doctor's AI that has read every chart in the hospital, catches a dangerous drug interaction before the prescription is signed, and never sends a byte of patient data outside the building. A teacher's AI that knows every student's strengths and weak spots and has tomorrow's lesson plan ready before the school day starts. A disaster coordinator's AI that runs on a laptop with no internet and still knows exactly where to send water because it has every supply manifest and damage report loaded locally.
 
-Here's the thing, though: one of the biggest challenges in creating these foundation and fine-tune models is the substantial need for **[high-quality data](https://arxiv.org/abs/2305.11206)**, which is both costly and time-consuming to gather and curate. This is where Open WebUI's mission comes into play. Our mission is to contribute to this vision by building the best AI interface and crowdsourcing curated datasets from our community of users.
+An engineer's AI on Mars that diagnoses a failing CO2 scrubber from maintenance logs alone, because there is no cloud twenty-two light-minutes from Earth.
 
-— [Tim](https://github.com/tjbck)
+All of this becomes possible when AI has **context**: your documents, your history, your tools, your memory, your world. And all of it requires one thing: that the AI lives with you, on your machine, under your control. Not visiting someone else's service. Home.
 
----
+That is what Open WebUI is. A home for AI. The place where your AI's knowledge, memory, tools, and skills accumulate over time into something that understands your work as deeply as you do. Something that doesn't just answer when asked, but anticipates what you need and acts.
 
-Our mission is founded on the belief that AI technologies hold transformative potential for society, yet their benefits have been narrowly confined due to complex setup requirements. Recognizing this, we are dedicated to democratizing AI by developing an easy-to-install, feature-rich local WebUI that is designed to operate locally without internet access. Enabling anyone with basic technical skills to tap into the power of AI, effectively bringing its capabilities to communities far and wide.
+It works with any model. It runs on your hardware. It scales from one person to thousands. And it is open source, because we believe this technology should belong to everyone.
 
-At the heart of our efforts is the creation of an open-sourced ecosystem of AI tools. Our commitment lies in making AI not only accessible but also beneficial for everyone. We envision a future where AI acts as a lever for societal advancement, driving progress, and technological breakthroughs across all communities.
+**Our mission is to bring AI to every person and every organization on Earth, and everywhere beyond it.**
 
-By eliminating technological barriers and making AI's advantages universally accessible, we aim to foster a positive impact worldwide. Our ultimate goal is to ensure that AI serves as a catalyst for positive change, helping to bridge gaps and create a more equitable society where everyone can benefit from the advancements in technology.
+### Come Build With Us
 
-### Our Vision: Shaping the Future Together
-
-At the heart of our mission lies a profound commitment not just to envision a future where advanced AI technology is universally accessible, but to actively build towards it. Our efforts extend beyond the development of our WebUI; We are at the forefront of creating an ecosystem that embodies the democratization of AI technology. This ecosystem, envisioned as a vibrant, community-driven platform, will be a repository of shared knowledge—ranging from model presets and custom prompts to valuable chat logs. A space where the collective intelligence of our community acts as the driving force for the continuous evolution and refinement of AIs, ensuring these advancements serve us, the actual users of these technologies.
-
-Our strategy aims to tackle the complex challenges of AI, such as model fine-tuning and dataset curation, head-on. Leveraging the collective skills and insights of our community, we'll forge innovative pathways that not only enhance the precision and relevance of AI models but also guarantee these improvements are shared openly. Our objective is unequivocal: to democratize access to refined, user-curated datasets, thereby eliminating barriers to advancing AI for all.
-
-As we navigate this journey, our vision serves as our north star, guiding our efforts to turn bold ambitions into reality. We extend an invitation for you to join us in this endeavor, as we work diligently to ensure AI technology becomes an empowering resource for individuals and communities across the globe.
+[GitHub](https://github.com/open-webui/open-webui) · [Discord](https://discord.gg/5rJgQTnV4s) · [Careers](https://careers.openwebui.com)
