--- a/docs/features/access-security/analytics/index.mdx
+++ b/docs/features/access-security/analytics/index.mdx
@@ -134,7 +134,7 @@ This helps you understand:
 #### Chats Tab
 
 :::info Admin Chat Access Required
-The Chats tab is only visible when **Admin Chat Access** is enabled in your instance settings.
+The Chats tab is only visible when [**`ENABLE_ADMIN_CHAT_ACCESS`**](/reference/env-configuration#enable_admin_chat_access) is enabled in your instance settings.
 :::
 
 The Chats tab shows conversations that used this model:
