--- a/docs/getting-started/quick-start/connect-a-provider/starting-with-openai.mdx
+++ b/docs/getting-started/quick-start/connect-a-provider/starting-with-openai.mdx
@@ -8,7 +8,7 @@ title: "OpenAI"
 
 Open WebUI makes it easy to connect to **OpenAI** and **Azure OpenAI**. This guide will walk you through adding your API key, setting the correct endpoint, and selecting models — so you can start chatting right away.
 
-For other providers that offer an OpenAI-compatible API (Anthropic, Google Gemini, Mistral, Groq, DeepSeek, and many more), see the **[OpenAI-Compatible Providers](/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible)** guide.
+For other providers that offer an OpenAI-compatible API (Google Gemini, Mistral, Groq, DeepSeek, and many more), see the **[OpenAI-Compatible Providers](/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible)** guide. For Anthropic's Claude models, see the dedicated **[Anthropic (Claude)](/getting-started/quick-start/connect-a-provider/starting-with-anthropic)** guide.
 
 ---
 
@@ -107,7 +107,7 @@ Simply choose GPT-4, o3-mini, or any compatible model offered by your provider.
 
 That's it! Your OpenAI API connection is ready to use.
 
-If you want to connect other providers (Anthropic, Google Gemini, Mistral, Groq, DeepSeek, etc.), see the **[OpenAI-Compatible Providers](/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible)** guide.
+If you want to connect other providers, see the **[Anthropic (Claude)](/getting-started/quick-start/connect-a-provider/starting-with-anthropic)** guide or the **[OpenAI-Compatible Providers](/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible)** guide for Google Gemini, Mistral, Groq, DeepSeek, and more.
 
 If you run into issues or need additional support, visit our [help section](/troubleshooting).
 
