--- a/docs/getting-started/updating.mdx
+++ b/docs/getting-started/updating.mdx
@@ -239,9 +239,9 @@ Automated updates can save time but require careful consideration of the trade-o
 The original `containrrr/watchtower` is **no longer maintained** and **does not work with Docker 29+**. The community has created maintained forks that resolve these issues.
 :::
 
-The original Watchtower project hasn't received updates in over two years and fails with Docker version 29.0.0 or newer due to API version incompatibility. Two maintained forks are now available: nickfedor/watchtower and Marrrrrrrrry/watchtower, both compatible with Docker 29+.
+The original Watchtower project hasn't received updates in over two years and fails with Docker version 29.0.0 or newer due to API version incompatibility. Two maintained forks are now available: nicholas-fedor/watchtower and Marrrrrrrrry/watchtower, both compatible with Docker 29+.
 
-**Recommended: nickfedor/watchtower fork**
+**Recommended: nicholas-fedor/watchtower fork**
 
 <Tabs>
   <TabItem value="one-time" label="One-Time Update" default>
@@ -453,7 +453,7 @@ For complete Diun documentation, visit https://crazymax.dev/diun/
 | **Best For** | Set-and-forget homelabs | Visual monitoring + control | Notification-only workflows |
 
 :::tip Recommendation
-- **For homelabs/personal use:** nickfedor/watchtower (automated)
+- **For homelabs/personal use:** nicholas-fedor/watchtower (automated)
 - **For managed environments:** WUD (visual + manual control)
 - **For production/critical systems:** Diun (notifications only) + manual updates
 :::
