--- a/docs/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible.mdx
+++ b/docs/getting-started/quick-start/connect-a-provider/starting-with-openai-compatible.mdx
@@ -40,7 +40,7 @@ When you add a connection, Open WebUI verifies it by calling the provider's `/mo
 
 | Provider | `/models` works? | Action Needed |
 |---|---|---|
-| Anthropic | No — uses non-standard auth headers | Add model IDs manually to the whitelist |
+| Anthropic | Yes — built-in compatibility layer | Auto-detection works |
 | GitHub Models | No — uses non-standard path | Add model IDs manually to the whitelist |
 | Perplexity | No — endpoint doesn't exist | Add model IDs manually to the whitelist |
 | MiniMax | No — endpoint doesn't exist | Add model IDs manually to the whitelist |
@@ -61,7 +61,7 @@ When you add a connection, Open WebUI verifies it by calling the provider's `/mo
 1. Open Open WebUI in your browser.
 2. Go to ⚙️ **Admin Settings** → **Connections** → **OpenAI**.
 3. Click ➕ **Add Connection**.
-4. Fill in the **URL** and **API Key** for your provider (see tabs below).
+4. Fill in the **URL** and **API Key** for your provider (see tabs below). The URL field will **suggest common provider endpoints** as you type.
 5. If your provider doesn't support `/models` auto-detection, add your model IDs to the **Model IDs (Filter)** allowlist.
 6. Click **Save**.
 
@@ -69,22 +69,26 @@ When you add a connection, Open WebUI verifies it by calling the provider's `/mo
 If running Open WebUI in Docker and your model server is on the host machine, replace `localhost` with `host.docker.internal` in the URL.
 :::
 
+:::tip Enable/Disable Connections
+Each connection has a **toggle switch** that lets you enable or disable it without deleting the connection. This is useful for temporarily deactivating a provider while preserving its configuration.
+:::
+
 ### Cloud Providers
 
 <Tabs>
   <TabItem value="anthropic" label="Anthropic" default>
 
-  **Anthropic** (Claude) offers an OpenAI-compatible endpoint. Note that this is intended for testing and comparison — for production use with full Claude features (PDF processing, citations, extended thinking, prompt caching), Anthropic recommends their native API.
+  :::tip
+  See the dedicated **[Anthropic (Claude)](/getting-started/quick-start/connect-a-provider/starting-with-anthropic)** guide for a full step-by-step walkthrough.
+  :::
+
+  **Anthropic** (Claude) offers an OpenAI-compatible endpoint. Open WebUI includes a built-in compatibility layer that automatically detects Anthropic URLs and handles model discovery — just plug in your API key and models are auto-detected. Note that this is intended for testing and comparison — for production use with full Claude features (PDF processing, citations, extended thinking, prompt caching), Anthropic recommends their native API.
 
   | Setting | Value |
   |---|---|
   | **URL** | `https://api.anthropic.com/v1` |
   | **API Key** | Your Anthropic API key from [console.anthropic.com](https://console.anthropic.com/) |
-  | **Model IDs** | **Required** — add manually (e.g., `claude-sonnet-4-5-20250514`, `claude-opus-4-0-20250514`) |
-
-  :::caution
-  The `/models` endpoint **will fail** for Anthropic because their API uses non-standard authentication headers (`x-api-key` instead of `Bearer`). This is a cosmetic issue — **chat completions will work correctly**. Just add your model IDs to the allowlist manually.
-  :::
+  | **Model IDs** | Auto-detected — leave empty or filter to specific models |
 
   </TabItem>
   <TabItem value="gemini" label="Google Gemini">
