--- a/docs/features/extensibility/plugin/tools/development.mdx
+++ b/docs/features/extensibility/plugin/tools/development.mdx
@@ -1521,7 +1521,7 @@ We strongly recommend using an [OpenAPI tool server](/features/extensibility/plu
 
 **Do not rely on runtime pip installation in production environments.** When running with `UVICORN_WORKERS > 1` or multiple replicas, each worker/replica attempts to install packages independently on startup. This causes **race conditions** where concurrent pip processes crash with `AssertionError` because pip's internal locking detects the simultaneous installs.
 
-**The recommended approach for production is to pre-install all required packages at image build time** using a custom Dockerfile:
+**Set [`ENABLE_AUTO_DEPENDENCY_INSTALL=False`](/reference/env-configuration#enable_auto_dependency_install) in production** to disable runtime pip installs entirely. Then pre-install all required packages at image build time using a custom Dockerfile:
 
 ```dockerfile
 FROM ghcr.io/open-webui/open-webui:main
