builtin file handling

--- a/docs/features/extensibility/plugin/tools/index.mdx
+++ b/docs/features/extensibility/plugin/tools/index.mdx
@@ -318,6 +318,8 @@ The **Builtin Tools** capability can be toggled on or off for each model in the 
 
 When the **Builtin Tools** capability is enabled, you can further control which **categories** of builtin tools are available to the model. This appears in the Model Editor as a set of checkboxes under **Builtin Tools**.
 
+![Builtin Tools categories in the Model Editor](/images/features/plugin/tools/builtin_tools.png)
+
 | Category | Tools Included | Description |
 |----------|----------------|-------------|
 | **Time & Calculation** | `get_current_timestamp`, `calculate_timestamp` | Get current time and perform date/time calculations |
