--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -30,7 +30,7 @@ Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/
 ### Let's Talk
 
 :::tip Use Your Work Email
-To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com, qq.com) are often flagged by our system and may not receive a response.
+To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, outlook.com icloud.com, qq.com) are flagged by our system and will not receive a response.
 :::
 
 [**Contact Enterprise Sales → sales@openwebui.com**](mailto:sales@openwebui.com)
