--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -91,6 +91,15 @@ Choose your preferred installation method below:
           <WSL />
         </div>
       </TabItem>
+      <TabItem value="development" label="Beta/Development">
+        <div className='mt-5'>
+
+### Beta/Development
+
+Want to test the latest features or contribute to Open WebUI? Use the `:dev` Docker tag to run the latest development build, or check out the [Local Development Guide](/getting-started/development) to set up a full dev environment from source.
+
+        </div>
+      </TabItem>
     </Tabs>
 
   </TabItem>
@@ -118,12 +127,13 @@ Choose your preferred installation method below:
 
       </TabItem>
 
-      <TabItem value="development" label="Development">
+      <TabItem value="development" label="Beta/Development">
         <div className='mt-5'>
-          <h3>Development Setup</h3>
-          <p>
-            For developers who want to contribute, check the Development Guide in <a href="/getting-started/advanced-topics">Advanced Topics</a>.
-          </p>
+
+### Beta/Development
+
+Want to test the latest features or contribute to Open WebUI? Our [Local Development Guide](/getting-started/development) walks you through cloning the repo, setting up the frontend and backend, and getting a full dev environment running from source.
+
         </div>
       </TabItem>
 
