--- a/docs/security.mdx
+++ b/docs/security.mdx
@@ -113,7 +113,7 @@ When you install a Tool, Function, or Pipeline, you are granting it the ability 
 | **Audit installed plugins** | Regularly review installed Tools (Workspace → Tools) and Functions (Admin Panel → Functions) |
 | **Protect your data directory** | The `/app/backend/data` directory contains your database and cached plugins—protect it from unauthorized access |
 | **Monitor resource usage** | Watch for unexpected CPU spikes that could indicate cryptomining or other abuse |
-| **Use official Docker images** | Only pull from `ghcr.io/open-webui/open-webui`—unofficial images may be compromised |
+| **Use official Docker images** | Only pull from `ghcr.io/open-webui/open-webui` or `openwebui/open-webui` (Docker Hub)—unofficial images may be compromised |
 
 ### What Is NOT a Vulnerability
 
